feat(chat): delete session
